Added a excanvas as a workarround for canvas in Internet Explorer

--- a/webui/index.html
+++ b/webui/index.html
@@ -13,6 +13,9 @@
         <a href='workings'>save workings</a></p>
     </div>
 
+    <!--[if lte IE 8]>
+    <script src='js/excanvas.compiled.js'></script>
+    <![endif]-->
     <script src='js/jquery-1.4.4.min.js'></script>
     <script src='js/rangy-core.js'></script>
     <script src='js/rangy-selectionsaverestore.js'></script>
