State before final prepairation

--- a/help/calculus.html
+++ b/help/calculus.html
@@ -364,7 +364,12 @@ div.comment div.cite {
 <pre class="code">differentiate (3x^3 - 4.5x^2 + 6x - 2)
    = 9x^2 - 9x + 6</pre>
 <p class="p">trigonometric functions:</p>
-<pre class="code"></pre>
+<pre class="code">differentiate sin(x)
+   = cos(x)
+differentiate cos(x)
+   = -sin(x)
+differentiate tan(x)
+   = 1/cos(x)^2</pre>
 <p class="p">and logarithms:</p>
 <pre class="code">differentiate (ln x)
    = x^-1</pre>
