--- a/help/index.html
+++ b/help/index.html
@@ -361,7 +361,7 @@ div.comment div.cite {
     the functionality of a normal calculator plus many nice extras and advanced
     features to make your life easier and help you master advanced mathematics.</p>
 <div class="topiclinks">
-<a href="basics.html"><div class="linkdiv"><div class="title">Basic Calculations (GCSE,C1,C2)</div></div></a><a href="calculus.html"><div class="linkdiv"><div class="title">Calculus (C2,C3,C4,NM,FP2)</div></div></a><a href="complex.html"><div class="linkdiv"><div class="title">Complex Numbers (FP1,FP2)</div></div></a><a href="matrices.html"><div class="linkdiv"><div class="title">Matrices (FP1,FP2)</div></div></a><a href="stats.html"><div class="linkdiv"><div class="title">Statistics (S1,S2)</div></div></a><a href="trig.html"><div class="linkdiv"><div class="title">Trigonometry (GCSE,C2,FP2)</div></div></a><a href="vectors.html"><div class="linkdiv"><div class="title">Vectors (C4)</div></div></a>
+<a href="getting_started.html"><div class="linkdiv"><div class="title">Accessing And Using The Calculator</div></div></a><a href="basics.html"><div class="linkdiv"><div class="title">Basic Calculations (GCSE,C1,C2)</div></div></a><a href="calculus.html"><div class="linkdiv"><div class="title">Calculus (C2,C3,C4,NM,FP2)</div></div></a><a href="complex.html"><div class="linkdiv"><div class="title">Complex Numbers (FP1,FP2)</div></div></a><a href="matrices.html"><div class="linkdiv"><div class="title">Matrices (FP1,FP2)</div></div></a><a href="stats.html"><div class="linkdiv"><div class="title">Statistics (S1,S2)</div></div></a><a href="trig.html"><div class="linkdiv"><div class="title">Trigonometry (GCSE,C2,FP2)</div></div></a><a href="vectors.html"><div class="linkdiv"><div class="title">Vectors (C4)</div></div></a>
 </div>
 </div>
 </div>
