--- a/help/trig.html
+++ b/help/trig.html
@@ -371,7 +371,7 @@ will be taken as radians</span>. To specific an angle is in degrees, just write
 <span xmlns:e="http://projectmallard.org/experimental/" class=" code">degs</span> after it:</p>
 <pre class="code">sin (5 degs)
 = 0.0872</pre>
-<p class="p">Note that whenever, exact answers will be given:</p>
+<p class="p">Note that whereeven possible, exact answers will be given:</p>
 <pre class="code">sin (pi/6)
 = 1/2
 cos (pi/6)
