--- a/help/vectors.html
+++ b/help/vectors.html
@@ -371,7 +371,7 @@ div.comment div.cite {
 <p class="p">find the dot-product of two vectors:</p>
 <pre class="code">[1,2,3] * [4,5,6]
    = 32</pre>
-<p class="p">and find the Eclidian Norm (length) of a vector:</p>
+<p class="p">and find the Euclidian Norm (length) of a vector:</p>
 <pre class="code">|| [1,2,3] ||
    = 3.74</pre>
 <div class="topiclinks"></div>
